--- a/final_assignment_group_2.Rmd
+++ b/final_assignment_group_2.Rmd
@@ -881,6 +881,12 @@ model_4 %>% get_regression_table()
 model_4 %>% get_regression_summaries()
 ```
 
+```{r}
+top_10_country_dummies <- top_10_clean_data %>% 
+  dummy_cols(select_columns = c("gender", "highest_level_of_education_completed", "race", "Industry", "Country"))
+  
+```
+
 ## Section 5 - Conclusions and Evaluation
 
 
